# paulwinex-com

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
configs/: app.nginx
src/: start.sh
src/home/: models.py
src/home/migrations/: 0001_initial.py  0002_resumepage_alter_galleryitempage_content.py
src/home/templates/home/: gallery.html  gallery_item.html  resume.html
src/main/: wsgi.py
src/main/settings/: base.py  dev.py  production.py
src/main/templates/: 404.html  500.html  base.html
